# Babas_Swarms_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  =0.4.0  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  EMERGENCY_FIX.md  HOTFIX_2026-03-08.md  LICENSE  MASTER_PROMPT.md  Makefile  README.md  SWARM_WIRING.md  TESTING.md  agents.py  bot.log~Stashed changes  callback_handlers.py  computer_agent.py  computer_control.py  deploy.sh  docker-compose.yml  formatters.py  interpreter_bridge.py  llm_client.py  main.py  notifications.py  playwright_agent.py  progress_tracker.py  pyproject.toml  requirements.txt  requirements_no_tiktoken.txt  restart.sh  router.py  streaming_response.py  task_orchestrator.py  telegram_ui.py  test_apis.py
agents/: __init__.py
bridges/: discord_bridge.py
config/: departments.yaml  models.yaml  routing_keywords.yaml
core/: agent_registry.py  agent_registry_old.py  app_context.py  builtin_hooks.py  health.py  hooks.py  hot_reload_registry.py  interpreter_bridge.py  log_config.py  multi_user.py  nexus_orchestrator.py  persistent_loop.py  rate_limiter.py  self_upgrade.py  tmp_cleanup.py  watchdog.py
data/: capability_metrics.jsonl
docs/: API_RELIABILITY_GUIDE.md  IMPLEMENTATION_GUIDE_UI_UX.md  RATE_LIMIT_RESILIENCE.md  SELF_UPGRADE.md  UI_UX_AUDIT_2026.md  UI_UX_COMPLETE_OVERHAUL.md  agents.md  architecture.md
handlers/: __init__.py  ai.py  artifact.py  brain.py  computer.py  dev.py  e2e.py  ecc_compat.py  enterprise.py  inline.py  orchestrate.py  overnight_handler.py  pm.py  research.py  sessions.py  shared.py  (+6 more)
(+244 files in other folders)
